# main.go
@@ -1,7 +1,8 @@
 package main
 
 import (
-	"./docs" // docs is generated by Swag CLI, you have to import it.
+	"github.com/Wastack/adventure/controller"
+	"github.com/Wastack/adventure/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/Wastack/adventure/engine"
 	"github.com/Wastack/adventure/engine/data/yaml"
 	"github.com/gin-gonic/gin"
@@ -34,16 +35,22 @@ func main() {
 		log.Fatalf("Error while parsing yaml file: %v", err)
 	}
 
-	// TODO
-	_ = game_data
 	// programatically set swagger info
 	docs.SwaggerInfo.Title = "Swagger Adventure API"
 	docs.SwaggerInfo.Description = "This is a server for the adventure game engine."
 	docs.SwaggerInfo.Version = "0.0"
-	docs.SwaggerInfo.Host = "localhost"
-	docs.SwaggerInfo.BasePath = "/v2"
-	docs.SwaggerInfo.Schemes = []string{"http", "https"}
+	docs.SwaggerInfo.Host = "192.168.0.27:8080"
+	docs.SwaggerInfo.BasePath = "/"
 	r := gin.New()
+
+	c := controller.NewController(game_data)
+
+	// Create API for engine
+	adventure := r.Group("/adventure")
+	{
+		adventure.GET("/first", c.ShowFirstState)
+		adventure.GET("", c.NextState)
+	}
 
 	// use ginSwagger middleware to serve the API docs
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
